Add vews for  index Posts#show, Posts#index methodsr

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,16 +1,10 @@
 h1 Bluethumb Blog Posts
 
-table
-  thead
-    tr
-      th
-      th
-      th
-
-  tbody
+div
+  div
     - @posts.each do |post|
-      tr
-        td = link_to 'Show', post
+      h2 = link_to post['title'], post_path(post['id'])
+
 
 br
 
