--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,5 +1,7 @@
 p#notice = notice
-
-=> link_to 'Edit', edit_post_path(@post)
-'|
-=< link_to 'Back', posts_path
+h2 = @post['title']
+p = @post['body']
+div
+  - @comments.each do |comment|
+    h3 = comment['name']
+    p = comment['body']
