--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,12 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="bg-gray-100 font-sans leading-normal tracking-normal">
+    <%= render 'layouts/navbar' %>
+    <div>
+      <p><%= flash[:notice] %></p>
+    </div>
+
     <%= yield %>
   </body>
 </html>
