--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,11 +1,13 @@
-h1 Bluethumb Blog Posts
+h1.my-12.text-blue-900.text-4xl.font-bold Bluethumb Blog Posts
 
 div
   div
     - @posts.each do |post|
-      h2 = link_to post['title'], post_path(post['id'])
-
-
-br
-
-= link_to 'New Post', new_post_path
+      .container.p-4.md:px-8.my-4.bg-blue-200.rounded-md
+        .flex.mb-3.justify-start.items-baseline
+          h2.underline.text-green-400.text-lg.font-semibold.hover:no-underline = link_to post['title'], post_path(post['id'])
+          span.px-2.text-gray-800.text-xs Posted on
+          span.pr-2.text-xs.text-gray-500 = DateTime.parse(post['created_at']).strftime("%A %H:%M, %d %b %Y")
+        p.text-gray-600
+          = post['body'].truncate_words(25)
+          == link_to 'Read more', post_path(post['id']), class: 'text-green-400 px-4'
