--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,11 @@
     <div>
       <p><%= flash[:notice] %></p>
     </div>
-
-    <%= yield %>
+    <main class="container w-full md:max-w-4xl mx-auto pt-20">
+      <%= yield %>
+    </main>
+    <div class="fixed bottom-5 right-5">
+      <%= link_to 'Create New Post', new_post_path, class: "bg-blue-400 text-lg text-gray-100 p-4 rounded-full hover:bg-blue-500 hover:text-gray-800" %>
+    </div>
   </body>
 </html>
