--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -1,4 +1,16 @@
-= form_for @post do |f|
-  
+= form_for(@post, url: posts_path) do |f|
+  .p-4
+    .my-6
+      .my-2
+        = f.label :title, class: "text-blue-500 text-xl font-bold"
+      .my-2
+        = f.text_field :title, class: "h-8 w-full border rounded"
 
-  .actions = f.submit
+    .my-6
+      .my-2
+        = f.label :body, class: "text-blue-500 text-xl font-bold"
+      .my-2
+        = f.text_area :body, class: "h-40 w-full border rounded"
+
+    .actions
+      = f.submit 'Create Post', class: "px-4 py-2 bg-blue-400 hover:bg-blue-500 text-gray-100 text-xl font-bold rounded"
