--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -1,5 +1,5 @@
-h1 New post
+h1.p-4.text-blue-700.text-4xl.font-bold.text-center Create New Post
+.w-10/12.mx-auto
+  == render 'form'
 
-== render 'form'
-
-= link_to 'Back', posts_path
+  = link_to 'Go to posts', posts_path, class: "px-4 text-blue-800"
