--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for(@post, url: posts_path) do |f|
+= form_for(@post) do |f|
   .p-4
     .my-6
       .my-2
@@ -11,6 +11,12 @@
         = f.label :body, class: "text-blue-500 text-xl font-bold"
       .my-2
         = f.text_area :body, class: "h-40 p-2 w-full border rounded"
+
+    - if @post.errors.any?
+      #error_explanation
+        ul.text-red-500.border.my-4.p-4.rounded.bg-red-100
+          - @post.errors.full_messages.each do |message|
+            li.px-4.py-1 = message
 
     .actions
       = f.submit 'Create Post', class: "px-4 py-2 bg-blue-400 hover:bg-blue-500 text-gray-100 text-xl font-bold rounded"
