--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -30,12 +30,12 @@
           .my-1
             = f.label :name, class: "text-gray-800 text-sm font-bold"
           .my-1
-            = f.text_field :name, class: "h-6 p-2 w-full border rounded"
+            = f.text_field :name, placeholder: '*Required', class: "h-8 p-2 py-3 w-full text-sm border rounded"
 
         .my-1
           .my-1
             = f.label :body, class: "text-gray-800 text-sm font-bold"
           .my-1
-            = f.text_area :body, class: "h-30 p-2 w-full border rounded"
+            = f.text_area :body, placeholder: '*Required. Add a comment', class: "h-32 px-2 w-full text-sm border rounded"
 
         = f.submit 'Add Comment', class: "px-4 py-2 text-sm bg-green-800 hover:bg-green-700 text-gray-100 rounded"
