Add min width to body, re-style button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="bg-gray-100 font-sans leading-normal tracking-normal">
+  <body class="body-min-width bg-gray-100 font-sans leading-normal tracking-normal">
     <%= render 'layouts/navbar' %>
     <main class="container w-full md:max-w-4xl mx-auto pt-20">
       <%= render 'layouts/flash_messages' %>
@@ -20,7 +20,7 @@
 
     </main>
     <div class="fixed bottom-5 right-5">
-      <%= link_to 'Create New Post', new_post_path, class: "bg-blue-400 text-lg text-gray-100 font-bold p-4 rounded-full hover:bg-blue-500" %>
+      <%= link_to 'Create New Post', new_post_path, class: "bg-blue-400 text-sm md:text-lg text-gray-100 font-bold p-3 md:p-4 rounded-full hover:bg-blue-500" %>
     </div>
   </body>
 </html>
